Bug 544223 - [12][codegen] StackMapFrame.addStackItem IOOBE